# vantagefx

./: .gitignore  CMakeLists.txt  TODO.txt  page.html  test.js  user.js
layout/: main.qml  qml.qrc
layout/controls/: MyButton.qml  TextBox.qml
layout/panels/: BetPanel.qml  LoginPanel.qml
layout/views/: Details.qml  List.qml  Loading.qml  Login.qml  OptionLine.qml
res/: ca.cer  log.properties
src/: GwtHttpRequest.cpp  GwtHttpRequest.h  main.cpp
src/analyzer/: FiddlerLogEntry.cpp  FiddlerLogEntry.h  FiddlerLogParser.cpp  FiddlerLogParser.h  GwtAnalyzer.cpp  GwtAnalyzer.h
src/api/: CheckedType.h  FiddlerLogEntry.cpp  FiddlerLogEntry.h  FiddlerLogParser.cpp  FiddlerLogParser.h  GwtBundle.cpp  GwtBundle.h  GwtField.cpp  GwtField.h  GwtHttpRequestContext.cpp  GwtHttpRequestContext.h  GwtIterator.cpp  GwtIterator.h  GwtObject.cpp  GwtObject.h  GwtObjectWrapper.h  GwtParseContext.cpp  GwtParseContext.h  GwtParser.cpp  GwtParser.h  GwtPathExpression.cpp  GwtPathExpression.h  GwtReflectedType.h  GwtRequestParser.cpp  GwtRequestParser.h  GwtResponseData.h  GwtResponseParser.cpp  GwtResponseParser.h  GwtRpcRequest.cpp  GwtRpcRequest.h  GwtRpcResponse.cpp  GwtRpcResponse.h  GwtType.cpp  GwtType.h  GwtValue.cpp  GwtValue.h  ParseError.h  RequestParser.cpp  RequestParser.h  ResponseParser.cpp  (+2 more)
src/controller/: StatisticRenderer.cpp  StatisticRenderer.h
src/http/: HttpConnection.cpp  HttpConnection.h  HttpContext.cpp  HttpContext.h  HttpRequest.cpp  HttpRequest.h  HttpResponse.cpp  HttpResponse.h  HttpResponseParser.cpp  HttpResponseParser.h  Url.cpp  Url.h
src/model/: AssetModel.cpp  AssetModel.h  CurrentSettings.cpp  CurrentSettings.h  GwtOptionModel.cpp  GwtOptionModel.h  MainModel.cpp  MainModel.h  OptionInfo.h  OptionModel.cpp  OptionModel.h  PersonModel.cpp  PersonModel.h  TransactionModel.cpp  TransactionModel.h  VantageFxModel.cpp  VantageFxModel.h
src/serialized/: Asset.cpp  Asset.h  Country.cpp  Country.h  Currency.cpp  Currency.h  CurrencyCountryLimit.cpp  CurrencyCountryLimit.h  FieldVerification.cpp  FieldVerification.h  GwtSerializableId.cpp  GwtSerializableId.h  InstrumentTypeFilter.cpp  InstrumentTypeFilter.h  InstrumentTypeSuperRel.cpp  InstrumentTypeSuperRel.h  IntegerParameter.cpp  IntegerParameter.h  ListParameter.cpp  ListParameter.h  Lut.cpp  Lut.h  LutResolverInitPackage.cpp  LutResolverInitPackage.h  LutType.cpp  LutType.h  MTServer.cpp  MTServer.h  MapMessageSource.cpp  MapMessageSource.h  MapParameter.cpp  MapParameter.h  Market.cpp  Market.h  PaymentMethod.cpp  PaymentMethod.h  PspCcTypeRel.cpp  PspCcTypeRel.h  SerializableParameter.h  SerializableParameter.inl  (+8 more)
src/serialized/api/: CheckedType.h
src/viewmodel/: AssetListModel.cpp  AssetListModel.h  AssetsViewModel.cpp  AssetsViewModel.h  ComboBoxModel.cpp  ComboBoxModel.h  Controller.cpp  Controller.h  MainViewModel.cpp  MainViewModel.h  OptionItem.cpp  OptionItem.h  OptionsListModel.cpp  OptionsListModel.h  PersonViewModel.cpp  PersonViewModel.h  VantageFxService.cpp  VantageFxService.h
